# chirpminds

./: .dvcignore  .gitignore  CLAUDE.md  Cargo.toml  README.md  env.yml  env_cpu.yaml  flake.nix  justfile  pyproject.toml  settings.ini
.dvc/: config
chirpminds/: Cargo.toml  pyproject.toml
chirpminds/data/raw/: pilot.dvc
chirpminds/lite/: README.md  pyproject.toml
chirpminds/lite/tests/: __init__.py
chirpminds/notes/: cv_object_detection.py  rapid_flow.py  rapid_label.ipynb
chirpminds/scripts/: extract_annotations.py  label_images.py  label_video.py  label_yolo.py  setup_studio.py
chirpminds/src/chirpminds/: cli.py  utils.py
chirpminds/src/chirpminds/data/: io.py
chirpminds/src/chirpminds/model/: __init__.py
chirpminds/src/chirpminds/pipeline/: extract_images.py  gen_mask.py  inference.py  train.py
chirpminds_core/: Cargo.toml  pyproject.toml
data/model/: .gitignore  groudingdino.dvc
docs/: architecture.md  collab.md  user.md
gui/: package.json  tsconfig.json
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-wasm/: Cargo.toml
gui/src/app/: globals.css  page.tsx
lite/src/chirpminds_lite/: __init__.py
nix/arion/: arion-compose.nix  docker-compose.yaml  label_studio.md  studioml.sh
notebooks/ipynb/: 000_download_gdrive.ipynb  001_process_video.ipynb  002_setup_annotation_project.ipynb  003_extract_annotation_project.ipynb  004_tracking.ipynb
notebooks/pypct/: 000_download_gdrive.py  001_process_video.py  002_setup_annotation_project.py  003_extract_annotation_project.py  004_tracking.py
notes/: cv_object.py  dino_config.py  predict_gdino_sam.py  predict_sam.py  read_video_frames.py  rerun_dash.py
old/: Cargo.toml  README.md  env.yml
old/chirpminds/: pyproject.toml
old/chirpminds/notes/: cv_object.py  demo.ipynb  predict_gdino_sam.py  predict_sam.py  rapid_label.py
old/chirpminds/scripts/: extract_annotations.py  extract_detection_pos.py  extract_frames.sh  label_yolo.py  setup_studio_inout.py  train_yolo.py
old/chirpminds/src/chirpminds/: __init__.py
old/chirpminds/src/chirpminds/pipeline/: auto_annotation.py
old/docs/: architecture.md  user.md
old/gui/: pnpm-lock.yaml
old/libchirpminds/src/: lib.rs
pychirpminds/: pyproject.toml
pychirpminds/data/model/: .gitignore  groundingdino.dvc  sam.dvc
pychirpminds/docs/: objectives.md
pychirpminds/lite/src/chirpminds_lite/: cli.py
pychirpminds/notes/: generate_mask_video.py  predict_gdino.py
src/chirpminds/: __init__.py  _modidx.py  cli.py  download.py  labelstudio.py  process_video.py  tracking.py  utils.py
src/chirpminds/data/: io.py  iss.py
src/chirpminds/labelstudio/: annotation.py  project.py
src/chirpminds/pipeline/: extract_images.py
tests/: __init__.py
