[tool.poetry]
name = "chirpminds"
version = "0.1.0"
description = "AI toolkit for studying creatures who chirp."
authors = ["Ank <ank@leoank.me>"]
readme = "README.md"
packages = [{ include = "chirpminds", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^23.3"
ruff = "^0.0"
build = "^0.10"
twine = "^4.0"


[tool.poetry.scripts]
chirpminds = "chirpminds.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["ANN", "C90", "D", "E", "F", "I", "N", "NPY", "PTH", "TID", "UP", "W"]
exclude = ["vendor"]
