[project]
name = "chirpminds"
version = "0.2.0"
description = "AI toolkit for studying creatures who chirp."
readme = "README.md"
authors = [
    { name = "Ankur Kumar", email = "ank@leoank.me" }
]
requires-python = ">=3.10"
dependencies = [
  "ultralytics",
  "supervision",
  "fiftyone",
  "label-studio",
  "label-studio-sdk",
  "joblib",
  "polars"
]

[project.optional-dependencies]
cpu = [
  "torch",
  "torchvision",
]
cu124 = [
  "torch",
  "torchvision",
]
dev = [
  "ipython",
  "marimo",
  "pytest",
  "ruff",
  "marimo"
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu124" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu124", extra = "cu124" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu124", extra = "cu124" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[project.scripts]
chirp = "chirpminds.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
